<resources>
    <string name="app_name">SocialFlavours</string>
    <string name="main_url">http://10.0.2.2:8080/</string>
    <string name="error_undelivered">The message could not be sent</string>
    <string name="error_connection">Connection error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="compulsory_field">Compulsory field</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="write_here">Write here...</string>
    <string name="accept">Accept</string>
    <string name="hasLoggedBefore"></string>
    <string name="goToRegister">New to Social Flavours? Register here</string>
    <string name="forgetPassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="alreadyRegistered">Already Registered? Login Here</string>
    <string name="recoverPassword">Recover your password:</string>
    <string name="enterEmailDescription">Recovering your password starts with the email linked to your account.</string>
    <string name="enterEmailDescription2">We will send a reminder of your password to the email linked to the inserted username.</string>
    <string name="sendRecoveryEmail">Send recovery Email</string>
    <string name="deleteRecipe">Delete recipe</string>
    <string name="deleteRecipeMessage">Are you sure you want to delete this recipe?</string>
    <string name="incomingFriendshipRequests">Incoming Friendship Requests</string>
    <string name="myRecipes">My Recipes</string>
    <string name="myFriendRecipes">My Friends Recipes</string>
    <string name="sendFriendshipRequest">Send a Friendship Request</string>
    <string name="createRecipe">Create a recipe</string>
    <string name="mealPlanner">Meal Planner</string>
    <string name="shoppingLists">Shopping Lists</string>
    <string name="logOut">Log Out</string>
    <string name="rating">Rating:</string>
    <string name="new_recipe_title">Title</string>
    <string name="new_recipe_description">Description</string>
    <string name="new_recipe_label_PreparationTime">Preparation Time:</string>
    <string name="new_recipe_et_preparationTime">(minutes)</string>
    <string name="tag">Tag:</string>
    <string name="steps">Steps:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="create">Create</string>
    <string name="oneStar">One Star</string>
    <string name="twoStars">Two Stars</string>
    <string name="threeStars">Three Stars</string>
    <string name="fourStars">Four Stars</string>
    <string name="fiveStars">Five Stars</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="save">Save</string>
    <string name="add_friend_sentence">Connect to share delicious recipes!</string>
    <string name="send_friendship_request_title">Send friendship request:</string>
    <string name="sending_friendship_request">If the user provided matches an existing user, we will notify them.</string>
    <string name="send_friendship_request">Send Friendship Request</string>
    <string name="decline_friendship_request">Decline Friendship Request</string>
    <string name="new_item_name">Name</string>
    <string name="new_item_quantity">Quantity:</string>
    <string name="quantity_hint">0</string>
    <string name="add">Add</string>
    <string name="check">I Have This Ingredient:</string>
    <string name="modify">Modify</string>
    <string name="deleteShoppingList">Delete Shopping List</string>
    <string name="deleteShoppingListMessage">Are you sure you want to delete this Shopping List?</string>
    <string name="emailSent">Email Sent Successfully!</string>
    <string name="continueWithLogin">Proceed to Login</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="no_recipes">No recipes created yet.</string>
    <string name="no_recipes_friends">Your friends have not created any recipes yet.</string>
    <string name="no_friendship_requests">You do not have any pending friend requests.</string>
    <string name="no_shopping_lists_created">No shopping lists created yet.</string>
    <string name="no_items_created">No items created yet.</string>
    <string name="friendshipRequest">Friendship Request Sent Successfully!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myFriends">Friends</string>
    <string name="helpMessage">Tap on a recipe to edit it or press to delete it.</string>
    <string name="defaultFriendMessage">"Friends with: "</string>
    <string name="no_friends_yet">You don\'t have any friends yet.</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="are_you_sure_friend">Are You Sure? You won\'t be able to see more of this friend recipes.</string>
    <string name="back">Back</string>
</resources>