<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.accrecovery.Recovery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/pb_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon_account"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recoverPassword"
            android:textSize="18sp"
            android:textColor="#2F3E46"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterEmailDescription"
            android:textSize="16sp"
            android:layout_margin="15dp"
            android:textColor="#354F52"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterEmailDescription2"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:textColor="#354F52"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/recovery_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="#5A5A5A"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_field"
            android:inputType="text"/>

        <Button
            android:id="@+id/recovery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sendRecoveryEmail"
            android:textSize="20dp"
            android:textColorHint="#CAD2C5"
            android:backgroundTint="#2F3E46"
            android:padding="30dp"
            android:onClick="rememberPassword"
            android:layout_margin="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueWithLogin"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:onClick="returnToLoginScreenFromRecovery"/>

    </LinearLayout>

</RelativeLayout>