<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.fragments.shopping_list.item.ModifyItem">

    <ProgressBar
        android:id="@+id/pb_modify_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/modify_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_border"
        android:textColor="#808080"
        android:layout_marginBottom="20dp"
        android:hint="@string/new_item_name"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/modify_item_quantity_label"
        android:layout_width="200dp"
        android:hint="@string/new_item_quantity"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColorHint="#354F52"
        android:padding="5dp"
        android:layout_height="match_parent"
        android:layout_below="@id/modify_item_name"/>

    <EditText
        android:id="@+id/modify_item_quantity"
        android:layout_width="200dp"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:layout_below="@+id/modify_item_name"
        android:background="@drawable/edit_text_border"
        android:textColor="#808080"
        android:hint="@string/quantity_hint"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/modify_item_check_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/modify_item_quantity"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/check"
        android:textColorHint="#354F52"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/modify_item_check"
        android:layout_width="200dp"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:layout_below="@+id/modify_item_quantity"
        android:textColor="#808080"
        android:hint="@string/quantity_hint"
        android:padding="5dp"/>

    <Button
        android:id="@+id/modify_item_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/modify_item_check"
        android:backgroundTint="#84A98C"
        android:layout_centerHorizontal="true"
        android:onClick="modifyItem"
        android:text="@string/modify"
        android:textColor="@color/white" />

</RelativeLayout>